--- a/Project/Views/Account/Login.cshtml
+++ b/Project/Views/Account/Login.cshtml
@@ -7,11 +7,7 @@
 	}
 }
 
-<form asp-controller="Account" asp-action="Login" method="post">
-  <div class="form-group">
-    <label for="nn">Nnn</label>
-    <input type="text" class="form-control" id="mm" name = "nn" placeholder="Enter Name">
-    </div>
+<form asp-controller="Account" asp-action="Login" method="post" class="login-form">
 <div class="form-group">
     <label for="Email">Email address</label>
     <input type="email" class="form-control" id="Email" name="Email" placeholder="Enter email" required >
