--- a/Project/Views/Account/Signin.cshtml
+++ b/Project/Views/Account/Signin.cshtml
@@ -9,13 +9,10 @@
 }
 
 
-<form asp-controller="Account" asp-action="Signin" method="post">
+<form asp-controller="Account" asp-action="Signin" method="post" class="sign_in_form">
     <input type ="hidden" asp-for="Id"/>
 
-  <div class="form-group">
-    <label for="nn">Nnn</label>
-    <input type="text" class="form-control" id="mm" name = "nn" placeholder="Enter Name">
-    </div>
+  
 
 
     <div class="form-group">
