--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -20,16 +20,18 @@
 			</ul>
 		</nav>
 
+		<div style="display:flex;flex-wrap:wrap;">
+			<form action="Account/Login">
+				<button class="signin-button">Login</button>
+			</form>
 
-		<form action="Account/Login">
-			<button class="signin-button">Login</button>
-		</form>
+			<form action="Account/signin">
+				<button class="signin-button">Sign In</button>
+			</form>
+		</div>
 
-		<form action="Account/signin">
-			<button class="signin-button">Sign In</button>
-		</form>
 
-		
+
 	</header>
 	<div class="container">
 		<main role="main" class="pb-3">
