--- a/Project/Views/Movie/Create.cshtml
+++ b/Project/Views/Movie/Create.cshtml
@@ -42,7 +42,7 @@
                 <span asp-validation-for="Movie_Pic" class="text-danger"></span>
             </div>
             <br />
-            <div class="form-group">
+            <div class="form-group" style="margin-bottom:50px;">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
