--- a/Project/Views/Movie/Details.cshtml
+++ b/Project/Views/Movie/Details.cshtml
@@ -46,7 +46,7 @@
         </dd>
     </dl>
 </div>
-<div>
+<div style="margin-bottom:50px;">
     <a asp-action="Edit" asp-route-id="@Model?.Movie_Id" class="btn btn-success">Edit</a> |
     <a asp-action="Index" class="btn btn-info">Back to List</a>
 </div>
