--- a/Project/Views/Movie/Edit.cshtml
+++ b/Project/Views/Movie/Edit.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-<h1>Edit</h1>
+<h1 style="padding-top:50px">Edit</h1>
 
 <h4>Movie</h4>
 <hr />
@@ -39,7 +39,7 @@
                 <input asp-for="Movie_Pic" class="form-control" />
                 <span asp-validation-for="Movie_Pic" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style="margin-bottom:50px;">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
