--- a/Project/wwwroot/css/site.css
+++ b/Project/wwwroot/css/site.css
@@ -168,9 +168,7 @@ body {
     }
 
 .movie-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    display: inline-block;
 }
 
 .movie {
@@ -416,3 +414,7 @@ a {
     .submit:hover {
         cursor: pointer;
     }
+/*Movie Index Table*/
+.table{
+    margin:100px auto 100px auto;
+}
