--- a/Project/Views/Movies/Index.cshtml
+++ b/Project/Views/Movies/Index.cshtml
@@ -48,7 +48,7 @@
 				<img src="~/Images/@item.Movie_Pic" alt="Movie 1" width=150px height=200px>
 				<div class="overlay">
 					<h3>@item.Title</h3>
-					<p>@item.Genres</p>
+					<p>@item.Genre</p>
 					<ul>
 						<li class="time">@item.Date</li>
 					</ul>
