--- a/Project/Views/Movie/Index.cshtml
+++ b/Project/Views/Movie/Index.cshtml
@@ -22,6 +22,9 @@
                 @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Genre)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Duration)
             </th>
             <th>
@@ -42,6 +45,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
+            <th>
+                @Html.DisplayFor(modelItem => item.Genre.GenreType)
+            </th>
             <td>
                 @Html.DisplayFor(modelItem => item.Duration)
             </td>
