--- a/Project/Views/Movie/Create.cshtml
+++ b/Project/Views/Movie/Create.cshtml
@@ -22,6 +22,10 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
+              <label asp-for="Genre.GenreType" class="control-label"></label>
+              <select asp-for="Genre.GenreType" class="form-control" asp-items="ViewBag.GenreType"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Duration" class="control-label"></label>
                 <input asp-for="Duration" class="form-control" />
                 <span asp-validation-for="Duration" class="text-danger"></span>
