--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 			</form>
 
 			<form action="Account/signin">
-				<button class="signin-button">Sign In</button>
+				<button class="signin-button">Sign Up</button>
 			</form>
 		</div>
 
