--- a/Project/Views/Movie/Create.cshtml
+++ b/Project/Views/Movie/Create.cshtml
@@ -9,7 +9,7 @@
     <span style="color:orangered">@Html.Raw(ViewBag.Message)</span>
 }
 <br />
-<h1>Create New Movie</h1>
+<h1>Add New Movie</h1>
 
 <hr />
 <div class="row">
@@ -22,8 +22,9 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-              <label asp-for="Genre.GenreType" class="control-label"></label>
-              <select asp-for="Genre.GenreType" class="form-control" asp-items="ViewBag.GenreType"></select>
+              <label asp-for="Genre1" class="control-label"></label>
+              <input asp-for="Genre1" class="form-control">
+              <span asp-validation-for="Genre1" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Duration" class="control-label"></label>
@@ -47,7 +48,7 @@
             </div>
             <br />
             <div class="form-group" style="margin-bottom:50px;">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Add" class="btn btn-primary" />
             </div>
         </form>
     </div>
