--- a/Project/Views/Movie/Index.cshtml
+++ b/Project/Views/Movie/Index.cshtml
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Genre.GenreType)
+                @Html.DisplayNameFor(model => model.Genre1)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Duration)
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Genre.GenreType)
+                @Html.DisplayFor(modelItem => item.Genre1)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Duration)
