--- a/Project/Views/Movies/Index.cshtml
+++ b/Project/Views/Movies/Index.cshtml
@@ -10,33 +10,16 @@
 }
 <div class="search-container">
 	<form>
-		<input type="text" placeholder="Search...">
+		<input type="text" name="search-bar" placeholder="Search...">
 		<select class="search-select">
-			<option value="movies">Movies</option>
-			<option value="actors">Actors</option>
+			@{
+				foreach (var item in Model.Select(item=>item.Genre1).Distinct())
+				{
+					<option>@item</option>
+				}
+			}
 		</select>
-		<select class="search-select">
-			<option value="">All Genres</option>
-			<option value="28">Action</option>
-			<option value="12">Adventure</option>
-			<option value="16">Animation</option>
-			<option value="35">Comedy</option>
-			<option value="80">Crime</option>
-			<option value="99">Documentary</option>
-			<option value="18">Drama</option>
-			<option value="10751">Family</option>
-			<option value="14">Fantasy</option>
-			<option value="36">History</option>
-			<option value="27">Horror</option>
-			<option value="10402">Music</option>
-			<option value="9648">Mystery</option>
-			<option value="10749">Romance</option>
-			<option value="878">Science Fiction</option>
-			<option value="53">Thriller</option>
-			<option value="10752">War</option>
-			<option value="37">Western</option>
-		</select>
-		<button type="submit">Search</button>
+		<button asp-controller="movies" asp-action="Search" type="submit">Search</button>
 	</form>
 </div>
 <section class="movies">
@@ -48,7 +31,7 @@
 				<img src="~/Images/@item.Movie_Pic" alt="Movie 1" width=150px height=200px>
 				<div class="overlay">
 					<h3>@item.Title</h3>
-					<p>@item.Genre</p>
+					<p>@item.Genre1</p>
 					<ul>
 						<li class="time">@item.Date</li>
 					</ul>
