--- a/Project/Views/Movies/Search.cshtml
+++ b/Project/Views/Movies/Search.cshtml
@@ -1,7 +1,52 @@
-﻿
+﻿@model IEnumerable<Project.Models.Movie>
+
 @{
-    ViewData["Title"] = "Search";
+	ViewData["Title"] = "Search Results for " + ViewBag.searchTerm;
+	if (ViewBag.acssess != null)
+	{
+		Layout = "~/Views/Shared/_AdminLayout.cshtml";
+	}
 }
 
-<h1>Search</h1>
+<section class="movies">
+	<h2>Search Results for "@ViewBag.searchTerm"</h2>
+	@if (Model != null && Model.Any())
+	{
+		foreach (var item in Model)
+		{
+			if (ViewBag.searchTerm == null && item.Genre1==ViewBag.filter)
+			{
+				<div class="movie-container">
+					<div class="movie">
+						<img src="~/Images/@item.Movie_Pic" alt="@item.Title" width="150" height="200">
+						<div class="overlay">
+							<h3>@item.Title</h3>
+							<p>@item.Genre1</p>
+							<ul>
+								<li class="time">@item.Date</li>
+							</ul>
+							<a asp-controller="movies" asp-action="Booking" class="btn">Book Now</a>
+						</div>
+					</div>
+				</div>
+			}
+			if (item.Title.ToLower().Contains(ViewBag.searchTerm.ToLower()))
+			{
+				<div class="movie-container">
+					<div class="movie">
+						<img src="~/Images/@item.Movie_Pic" alt="@item.Title" width="150" height="200">
+						<div class="overlay">
+							<h3>@item.Title</h3>
+							<p>@item.Genre1</p>
+							<ul>
+								<li class="time">@item.Date</li>
+							</ul>
+							<a asp-controller="movies" asp-action="Booking" class="btn">Book Now</a>
+						</div>
+					</div>
+				</div>
+			}
+		}
+	}
 
+</section>
