--- a/Project/Views/Account/Login.cshtml
+++ b/Project/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model User
 @{
     ViewData["Title"] = "Login";
-    if(ViewBag.acsses != null)
+    if(ViewBag.acsses =="Admin")
 	{
 		 Layout = "~/Views/Shared/_AdminLayout.cshtml";
 	}
