--- a/Project/Views/Main/ContactUs.cshtml
+++ b/Project/Views/Main/ContactUs.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
 	ViewData["Title"] = "ContactUs";
-	if(ViewBag.acsses != null)
+	if(ViewBag.acsses =="Admin")
 	{
 		 Layout = "~/Views/Shared/_AdminLayout.cshtml";
 	}	
