--- a/Project/Views/Movie/Index.cshtml
+++ b/Project/Views/Movie/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Index";
     
-	    if(ViewBag.acssess   != null)
+	    if(ViewBag.acsses == "Admin")
 	    {
 		     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 	    }
