--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -21,13 +21,24 @@
 		</nav>
 
 		<div style="display:flex;flex-wrap:wrap;">
-			<form action="Account/Login">
+			@{
+				if (ViewBag.acsses == null)
+				{
+					<form action="Account/Login">
 				<button class="signin-button">Login</button>
 			</form>
 
 			<form action="Account/signin">
 				<button class="signin-button">Sign Up</button>
 			</form>
+				}
+				else{
+					<form action="Account/Logout">
+				<button class="signin-button">LogOut</button>
+			</form>
+				}
+			}
+			
 		</div>
 
 
