--- a/Project/Views/Account/Signin.cshtml
+++ b/Project/Views/Account/Signin.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Sign In";
-    if(ViewBag.acsses != null)
+    if(ViewBag.acsses =="Admin")
 	{
 		 Layout = "~/Views/Shared/_AdminLayout.cshtml";
 	}
