--- a/Project/Views/Main/Index.cshtml
+++ b/Project/Views/Main/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
 	ViewData["Title"] = "Index";
 	
-	if(ViewBag.acsses != null)
+	if(ViewBag.acsses =="Admin")
 	{
 		 Layout = "~/Views/Shared/_AdminLayout.cshtml";
 	}
