--- a/Project/Views/Movies/Booking.cshtml
+++ b/Project/Views/Movies/Booking.cshtml
@@ -1,7 +1,7 @@
 @{
     ViewData["Title"] = "Booking";
 
-    if(ViewBag.acsses != null)
+    if(ViewBag.acsses  =="Admin")
 	{
 		 Layout = "~/Views/Shared/_AdminLayout.cshtml";
 	}
