--- a/Project/Views/Movies/Index.cshtml
+++ b/Project/Views/Movies/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Index";
 
-    if (ViewBag.acsses != null)
+    if (ViewBag.acsses =="Admin")
     {
         Layout = "~/Views/Shared/_AdminLayout.cshtml";
     }
